Backend/Kubernetes/K8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name:  main-server-service
spec:
  selector:
    app:  main-server
  type: ClusterIP
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  3000 ..
